feat: api log 작업
